# img-recog

./: .gitattributes  .gitignore  app.py  emnist_data.npz  pyproject.toml  recognizer.py
img_recog/: __init__.py
