[project]
name = "img-recog"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandre Bertuol",email = "axdbertuol@gmail.com"}
]
packages = [
    {include = "img_recog"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "streamlit (>=1.45.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.streamlit]
main_module = "img-recog"